# firedot

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  debug.sh  game_save  main.cpp  run.sh  todo.md
.cache/clangd/index/: main.cpp.58BC8EAE672B8100.idx
droid-project/: local.properties
droid-project/app/: build.gradle
droid-project/app/jni/: Application.mk  CMakeLists.txt  SDL2  SDL2_image  SDL2_ttf  SPSCQueue  algae  boost  freetype
droid-project/app/jni/src/: Android.mk  Application.mk  CMakeLists.txt
droid-project/app/src/main/: AndroidManifest.xml
droid-project/app/src/main/assets/: fonts  sounds
droid-project/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
droid-project/app/src/main/res/values/: strings.xml
include/: arena.h  collider.h  game.h  game_object.h  load_game.h  load_sound_files.h  mapping.h  metaphor.h  physics.h  pitch_collection.h  sample_bank.h  sample_buffer.h  sample_load.h  save_state.h  sensor.h  sequencer.h  synthesis.h  synthesis_abstract.h  synthesis_clap_envelope.h  synthesis_frequency_modulation.h  synthesis_mixing.h  synthesis_parameter.h  synthesis_physical_modeling.h  synthesis_sampling.h  synthesis_subtractive.h  synthesis_type.h  synthesizer_settings.h  ui.h  ui_abstract.h  ui_abstract_cached_render_ui.h  ui_choose_character.h  ui_game.h  ui_instrument_metaphor_selection_popup.h  ui_instrument_metaphor_selector.h  ui_instrument_select_modal.h  ui_instrument_setup.h  ui_keyboard.h  ui_load_savefile.h  ui_mapping.h  ui_mapping_select_popup.h  (+22 more)
src/: ui_navigation.cpp  window.cpp
